# urivql

./: .gitignore  CHANGELOG.md  LICENSE  README.md  goal.yaml  pyproject.toml  urivql.markpact.md
data/: events.jsonl
markpacts/: urivql.markpact.md
tests/: conftest.py  test_import.py  test_manifest.py  test_runtime.py
urivql/: __init__.py  handlers.py  manifest.yaml  routes.py
